# levenshtein-rust

./: LICENSE  index.js  package-lock.json  package.json
native/: Cargo.toml  README.md  package-lock.json  package.json
native/src/: lib.rs
