[package]
name = "levenshtein-rust"
version = "0.1.0"
authors = ["Guillermo Fragachan"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levenshtein = "1.0.5"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
